--- a/css/queries.css
+++ b/css/queries.css
@@ -45,7 +45,8 @@
 
   .main-nav-list li a {
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+    padding: 1.4rem;
   }
 
   .heading-secondary {
@@ -60,6 +61,11 @@
   .text-container {
     padding: 0 3.2rem;
   }
+  .btn:link, 
+  .btn:visited {
+    font-size: 1.4rem;
+  }
+
 }
 
 @media (max-width: 64em) {
@@ -88,9 +94,13 @@ html {
 font-size: 55%;
 }
 
+nav {
+height: 6.4rem; 
+}
 .btn:link, 
 .btn:visited {
 margin-right:20rem !important;
+padding: 0.8rem 0.8rem;
 }
 
 .main-nav-list li a {
@@ -220,7 +230,6 @@ flex-direction: column;
 gap:3.2rem;
 }
 .main-nav-list li a {
-
   font-size: 3rem;
 }
 
@@ -287,9 +296,7 @@ gap:3.2rem;
   .hero {
     padding: 0 3rem;
   }
-  nav{
-    padding: 0;
-  }
+ 
 
   .btn:link, .btn:visited {
     margin-right: 0rem !important;
@@ -342,7 +349,7 @@ gap:3.2rem;
 
   font-size: 1.4rem;
   font-weight: 500;
-  padding: 1.4rem 1.4rem;
+  padding: 1rem 1rem;
 
 }
 .section-about {
@@ -350,7 +357,9 @@ gap:3.2rem;
 }
 
 .heading-secondary {
-  margin-bottom: 3.2rem;
+  font-size: 1.8rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
 }
 .section-coaching {
   padding:4.8rem 0;
@@ -389,5 +398,10 @@ gap:3.2rem;
   width:50%;
   align-self: center;
   border-radius: 5px;
+}
+.subheading {
+  font-size: 2rem;
+  margin-bottom: 3.2rem;
+
 }
 }
