--- a/css/queries.css
+++ b/css/queries.css
@@ -196,16 +196,12 @@ margin-top: 3.2rem;
   width:100%;
   height: 100vh;
   transform: translateX(100%);
-
   display: flex;
   align-items: center;
   justify-content: center;
   transition: all 0.5s ease-in;
-  
   opacity:0;
-
   pointer-events: none;
-
   visibility: hidden;
 }
 
@@ -236,8 +232,6 @@ gap:3.2rem;
 }
 
 @media (max-width: 44em) {
-
-
 .grid--3c {
   grid-template-columns: repeat(2, 1fr);
   column-gap:3.2rem;
@@ -284,8 +278,6 @@ gap:3.2rem;
   width:100%;
   height: 400px;
 } 
-
-
 }
 
 @media (max-width: 34em) {
@@ -293,9 +285,9 @@ gap:3.2rem;
     font-size: 46%;
     }
  
-  .hero {
-    padding: 0 3rem;
-  }
+.hero {
+  padding: 0 3rem;
+}
  
 
   .btn:link, .btn:visited {
@@ -346,10 +338,9 @@ gap:3.2rem;
   }
 
 .btn:link, .btn:visited {
-
-  font-size: 1.4rem;
+  font-size: 1rem;
   font-weight: 500;
-  padding: 1rem 1rem;
+  padding: 0.8rem 0.8rem;
 
 }
 .section-about {
@@ -358,8 +349,8 @@ gap:3.2rem;
 
 .heading-secondary {
   font-size: 1.8rem;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
+  margin-bottom:3.2rem;
+  margin-top: 3.2rem;
 }
 .section-coaching {
   padding:4.8rem 0;
@@ -395,7 +386,7 @@ gap:3.2rem;
   height: 100%;
 } 
 .project-image {
-  width:50%;
+  width:100%;
   align-self: center;
   border-radius: 5px;
 }
@@ -404,4 +395,11 @@ gap:3.2rem;
   margin-bottom: 3.2rem;
 
 }
+.step-number {
+  font-size: 3.6rem;
 }
+.heading-tertiary {
+  font-size: 2.4rem;
+  margin-bottom: 1.4rem;
+  margin-top: 1.4rem;
+}}
